--- a/Team3Shopping/Views/Shared/_Layout.cshtml
+++ b/Team3Shopping/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
                         <input class="form-control" type="text" placeholder="Search">
                     </form>
 
-                    <a href="#" class="btn btn-info btn-lg">
+                    <a href="/Cart/ToCart" class="btn btn-info btn-lg">
                         <span class="glyphicon glyphicon-shopping-cart"></span>  Cart
                     </a>
                 </div>
