--- a/Team3Shopping/Views/Cart/ToCart.cshtml
+++ b/Team3Shopping/Views/Cart/ToCart.cshtml
@@ -14,11 +14,10 @@
     <div class="title">
         Shopping Bag
     </div>
-
     <!-- Product #1 -->
     <div class="item">
         <div class="buttons">
-            <span class="delete-btn"></span>
+            <!--<span class="delete-btn"></span> -->
             <span class="like-btn"></span>
         </div>
 
@@ -40,6 +39,7 @@
             <button class="minus-btn" type="button" name="button">
                 <img src="/Image/Cart/minus.svg" alt="" />
             </button>
+            <button class="remove" type="button" name="button">Remove</button>
         </div>
 
         <div class="total-price">$549</div>
@@ -70,6 +70,7 @@
             <button class="minus-btn" type="button" name="button">
                 <img src="/Image/Cart/minus.svg" alt="" />
             </button>
+            <button class="remove" type="button" name="button">Remove</button>
         </div>
 
         <div class="total-price">$870</div>
@@ -100,6 +101,7 @@
             <button class="minus-btn" type="button" name="button">
                 <img src="/Image/Cart/minus.svg" alt="" />
             </button>
+            <button class="remove" type="button" name="button">Remove</button>
         </div>
 
         <div class="total-price">$349</div>
