--- a/Team3Shopping/wwwroot/css/cartPage.css
+++ b/Team3Shopping/wwwroot/css/cartPage.css
@@ -50,19 +50,20 @@ body {
     margin-right: 60px;
 }
 
-.delete-btn {
+/*.delete-btn {
     display: inline-block;
     cursor: pointer;
     width: 18px;
     height: 17px;
     background: url("/Image/Cart/delete-icn.svg") no-repeat center;
     margin-right: 20px;
-}
+}*/
+
 
 .like-btn {
     position: absolute;
     top: 9px;
-    left: 15px;
+    left: -15px;
     display: inline-block;
     background: url('/Image/Cart/twitter-heart.png');
     width: 60px;
@@ -101,9 +102,9 @@ body {
 
 /* Product Description */
 .description {
-    padding-top: 10px;
-    margin-right: 60px;
-    width: 115px;
+    padding-top: 8px;
+    margin-right: 20px;
+    width: 150px;
 }
 
     .description span {
@@ -114,19 +115,19 @@ body {
     }
 
         .description span:first-child {
-            margin-bottom: 5px;
+            margin-bottom: 2px;
         }
 
         .description span:last-child {
             font-weight: 300;
-            margin-top: 8px;
+            margin-top: 4px;
             color: #86939E;
         }
 
 /* Product Quantity */
 .quantity {
     padding-top: 20px;
-    margin-right: 60px;
+    margin-right: 30px;
 }
 
     .quantity input {
@@ -147,6 +148,18 @@ button[class*=btn] {
     border: none;
     cursor: pointer;
 }
+/*Remove*/
+.remove {
+    border: none;
+    background-color: transparent;
+    outline: none;
+    font-size: 12px;
+    font-family:roboto;
+}
+.remove:hover {
+    color: red;
+}
+
 
 .minus-btn img {
     margin-bottom: 3px;
@@ -154,6 +167,7 @@ button[class*=btn] {
 
 .plus-btn img {
     margin-top: 2px;
+
 }
 
 button:focus,
@@ -169,6 +183,7 @@ input:focus {
     font-size: 16px;
     color: #43484D;
     font-weight: 300;
+    margin-right:-10px;
 }
 
 /* Responsive */
