--- a/Team3Shopping/Views/Cart/ToCart.cshtml
+++ b/Team3Shopping/Views/Cart/ToCart.cshtml
@@ -42,7 +42,7 @@
             <button class="remove" type="button" name="button">Remove</button>
         </div>
 
-        <div class="total-price">$549</div>
+        <div class="price">$549</div>
     </div>
 
     <!-- Product #2 -->
@@ -73,7 +73,7 @@
             <button class="remove" type="button" name="button">Remove</button>
         </div>
 
-        <div class="total-price">$870</div>
+        <div class="price">$870</div>
     </div>
 
     <!-- Product #3 -->
@@ -104,7 +104,66 @@
             <button class="remove" type="button" name="button">Remove</button>
         </div>
 
-        <div class="total-price">$349</div>
+        <div class="price">$349</div>
     </div>
+    <div class="item">
+        <div class="buttons">
+            <span class="delete-btn"></span>
+            <span class="like-btn"></span>
+        </div>
+
+        <div class="image">
+            <img src="/Image/Cart/item-2.png" alt="" />
+        </div>
+
+        <div class="description">
+            <span>Maison Margiela</span>
+            <span>Future Sneakers</span>
+            <span>White</span>
+        </div>
+
+        <div class="quantity">
+            <button class="plus-btn" type="button" name="button">
+                <img src="/Image/Cart/plus.svg" alt="" />
+            </button>
+            <input type="text" name="name" value="1">
+            <button class="minus-btn" type="button" name="button">
+                <img src="/Image/Cart/minus.svg" alt="" />
+            </button>
+            <button class="remove" type="button" name="button">Remove</button>
+        </div>
+
+        <div class="price">$870</div>
+    </div>
+    <div class="item">
+        <div class="buttons">
+            <span class="delete-btn"></span>
+            <span class="like-btn"></span>
+        </div>
+
+        <div class="image">
+            <img src="/Image/Cart/item-2.png" alt="" />
+        </div>
+
+        <div class="description">
+            <span>Maison Margiela</span>
+            <span>Future Sneakers</span>
+            <span>White</span>
+        </div>
+
+        <div class="quantity">
+            <button class="plus-btn" type="button" name="button">
+                <img src="/Image/Cart/plus.svg" alt="" />
+            </button>
+            <input type="text" name="name" value="1">
+            <button class="minus-btn" type="button" name="button">
+                <img src="/Image/Cart/minus.svg" alt="" />
+            </button>
+            <button class="remove" type="button" name="button">Remove</button>
+        </div>
+
+        <div class="price">$870</div>
+    </div>
+
 </div>
 
