--- a/Team3Shopping/Views/Cart/ToCart.cshtml
+++ b/Team3Shopping/Views/Cart/ToCart.cshtml
@@ -1,6 +1,9 @@
 ﻿
 @{
     ViewData["title"] = "Shopping Cart";
+    List<Cart> carts = (List<Cart>)ViewData["cart"];
+    List<Product> products = (List<Product>)ViewData["product"];
+    List<User> users = (List<User>)ViewData["user"];
 }
 @section Css{
     <link href="~/css/cartPage.css" rel="stylesheet" />
@@ -12,158 +15,44 @@
 <div class="shopping-cart">
     <!-- Title -->
     <div class="title">
-        Shopping Bag
+        Shopping Cart
     </div>
-    <!-- Product #1 -->
-    <div class="item">
-        <div class="buttons">
-            <!--<span class="delete-btn"></span> -->
-            <span class="like-btn"></span>
-        </div>
+    <!--Looping through all the products -->
+    @for (int i = 0; i < carts.Count; i++)
+    {
+        if (carts[i].AddToCartProductQuantity > 0)
+        {
+            float price = products[i].ProductPrice * carts[i].AddToCartProductQuantity;
+            <div class="item">
+                <div class="buttons">
+                    <!--<span class="delete-btn"></span> -->
+                    <span class="like-btn"></span>
+                </div>
 
-        <div class="image">
-            <img src="~/Image/Cart/item-1.png" alt="" />
-        </div>
+                <div class="image">
+                    <img src="@products[i].ProductImage" alt="" />
+                </div>
 
-        <div class="description">
-            <span>Common Projects</span>
-            <span>Bball High</span>
-            <span>White</span>
-        </div>
+                <div class="description">
+                    <span>@products[i].ProductName</span>
+                    <span>@products[i].ProductCategory</span>
+                    <span>@products[i].ProductPrice</span>
+                </div>
 
-        <div class="quantity">
-            <button class="plus-btn" type="button" name="button">
-                <img src="/Image/Cart/plus.svg" alt="" />
-            </button>
-            <input type="text" name="name" value="1">
-            <button class="minus-btn" type="button" name="button">
-                <img src="/Image/Cart/minus.svg" alt="" />
-            </button>
-            <button class="remove" type="button" name="button">Remove</button>
-        </div>
+                <div class="quantity">
+                    <button class="plus-btn" type="button" name="button">
+                        <img src="/Image/Cart/plus.svg" alt="" />
+                    </button>
+                    <input type="text" name="name" value="@carts[i].AddToCartProductQuantity">
+                    <button class="minus-btn" type="button" name="button">
+                        <img src="/Image/Cart/minus.svg" alt="" />
+                    </button>
+                    <button class="remove" type="button" name="button">Remove</button>
+                </div>
 
-        <div class="price">$549</div>
-    </div>
-
-    <!-- Product #2 -->
-    <div class="item">
-        <div class="buttons">
-            <span class="delete-btn"></span>
-            <span class="like-btn"></span>
-        </div>
-
-        <div class="image">
-            <img src="/Image/Cart/item-2.png" alt="" />
-        </div>
-
-        <div class="description">
-            <span>Maison Margiela</span>
-            <span>Future Sneakers</span>
-            <span>White</span>
-        </div>
-
-        <div class="quantity">
-            <button class="plus-btn" type="button" name="button">
-                <img src="/Image/Cart/plus.svg" alt="" />
-            </button>
-            <input type="text" name="name" value="1">
-            <button class="minus-btn" type="button" name="button">
-                <img src="/Image/Cart/minus.svg" alt="" />
-            </button>
-            <button class="remove" type="button" name="button">Remove</button>
-        </div>
-
-        <div class="price">$870</div>
-    </div>
-
-    <!-- Product #3 -->
-    <div class="item">
-        <div class="buttons">
-            <span class="delete-btn"></span>
-            <span class="like-btn"></span>
-        </div>
-
-        <div class="image">
-            <img src="/Image/Cart/item-3.png" alt="" />
-        </div>
-
-        <div class="description">
-            <span>Our Legacy</span>
-            <span>Brushed Scarf</span>
-            <span>Brown</span>
-        </div>
-
-        <div class="quantity">
-            <button class="plus-btn" type="button" name="button">
-                <img src="/Image/Cart/plus.svg" alt="" />
-            </button>
-            <input type="text" name="name" value="1">
-            <button class="minus-btn" type="button" name="button">
-                <img src="/Image/Cart/minus.svg" alt="" />
-            </button>
-            <button class="remove" type="button" name="button">Remove</button>
-        </div>
-
-        <div class="price">$349</div>
-    </div>
-    <div class="item">
-        <div class="buttons">
-            <span class="delete-btn"></span>
-            <span class="like-btn"></span>
-        </div>
-
-        <div class="image">
-            <img src="/Image/Cart/item-2.png" alt="" />
-        </div>
-
-        <div class="description">
-            <span>Maison Margiela</span>
-            <span>Future Sneakers</span>
-            <span>White</span>
-        </div>
-
-        <div class="quantity">
-            <button class="plus-btn" type="button" name="button">
-                <img src="/Image/Cart/plus.svg" alt="" />
-            </button>
-            <input type="text" name="name" value="1">
-            <button class="minus-btn" type="button" name="button">
-                <img src="/Image/Cart/minus.svg" alt="" />
-            </button>
-            <button class="remove" type="button" name="button">Remove</button>
-        </div>
-
-        <div class="price">$870</div>
-    </div>
-    <div class="item">
-        <div class="buttons">
-            <span class="delete-btn"></span>
-            <span class="like-btn"></span>
-        </div>
-
-        <div class="image">
-            <img src="/Image/Cart/item-2.png" alt="" />
-        </div>
-
-        <div class="description">
-            <span>Maison Margiela</span>
-            <span>Future Sneakers</span>
-            <span>White</span>
-        </div>
-
-        <div class="quantity">
-            <button class="plus-btn" type="button" name="button">
-                <img src="/Image/Cart/plus.svg" alt="" />
-            </button>
-            <input type="text" name="name" value="1">
-            <button class="minus-btn" type="button" name="button">
-                <img src="/Image/Cart/minus.svg" alt="" />
-            </button>
-            <button class="remove" type="button" name="button">Remove</button>
-        </div>
-
-        <div class="price">$870</div>
-    </div>
-
+                <div class="price">$@price</div>
+            </div>
+        }
+    }
 </div>
 
