Added AddToCart() and updated Gallery view

--- a/Team3Shopping/Views/Gallery/Index.cshtml
+++ b/Team3Shopping/Views/Gallery/Index.cshtml
@@ -7,6 +7,11 @@
 @section Css{
     <link href="~/css/productList.css" rel="stylesheet" />
 }
+
+@section Scripts{ 
+    <script scr =" ~/js/Gallery.js"></script>
+}
+
 <!-- Header-->
 <header class="bg-dark py-5">
     <div class="container px-4 px-lg-5 my-5">
@@ -32,19 +37,21 @@
                         <div class="card h-100">
                             <!-- Product image-->
                             <a asp-controller="Gallery" asp-action="@myproduct.ProductName">
-                            <img class="card-img-top" src="~/Images/whitestar.jpeg" alt="..." />
-                            <!-- Product details-->
-                            <div class="card-body p-4">
-                                <div class="text-center">
-                                    <!-- Product name-->
-                                    <h5 class="fw-bolder">@myproduct.ProductName</h5>
-                                    <!-- Product price-->
-                                    $@myproduct.ProductPrice
+                                <img class="card-img-top" src="~/Images/whitestar.jpeg" alt="..." />
+                                <!-- Product details-->
+                                <div class="card-body p-4">
+                                    <div class="text-center">
+                                        <!-- Product name-->
+                                        <h5 class="fw-bolder">@myproduct.ProductName</h5>
+                                        <!-- Product price-->
+                                        $@myproduct.ProductPrice
+                                    </div>
                                 </div>
-                            </div></a>
+                            </a>
                             <!-- Product actions-->
+
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to Cart</a></div>
+                                <div class="text-center"><a class="addtocart_btn" href="#">Add to Cart</a></div>
                             </div>
                         </div>
                     </div>
