--- a/Team3Shopping/Views/Shared/_Layout.cshtml
+++ b/Team3Shopping/Views/Shared/_Layout.cshtml
@@ -30,10 +30,10 @@
                             <a class="nav-link">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link">Features</a>
+                            <a class="nav-link" >Features</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link">Pricing</a>
+                            <a class="nav-link" >Pricing</a>
                         </li>
                         <li class="nav-item dropdown btn-group">
                             <a class="nav-link dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">More info</a>
@@ -42,6 +42,9 @@
                                 <a class="dropdown-item">Billing adress</a>
                                 <a class="dropdown-item">Discounts</a>
                             </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="PurchaseHistory" asp-action="Test" >My Purchases</a>
                         </li>
                     </ul>
                     <form class="form-inline waves-effect waves-light">
