Updated GalleryController & Gallery View

--- a/Team3Shopping/Views/Gallery/Index.cshtml
+++ b/Team3Shopping/Views/Gallery/Index.cshtml
@@ -2,6 +2,7 @@
     ViewData["Title"] = "Gallery";
     string searchString = (string)ViewData["searchString"];
     List<Product> products = (List<Product>)ViewData["products"];
+    int currCount = (int)ViewData["cartCounter"];
 }
 
 @section Css{
@@ -17,6 +18,7 @@
     <div class="container px-4 px-lg-5 my-5">
         <div class="text-center text-white">
             <h1 class="display-4 fw-bolder">Shop in style</h1>
+            <h1 class="cartCounter">@currCount</h1>
             <p class="lead fw-normal text-white-50 mb-0">WhiteStar Shopping</p>
         </div>
     </div>
@@ -48,10 +50,11 @@
                                     </div>
                                 </div>
                             </a>
+
                             <!-- Product actions-->
 
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="addtocart_btn" href="#">Add to Cart</a></div>
+                                <div class="text-center"><div class="addtocart_btn">Add to Cart</div></div>
                             </div>
                         </div>
                     </div>
