--- a/Team3Shopping/Views/Cart/ToCart.cshtml
+++ b/Team3Shopping/Views/Cart/ToCart.cshtml
@@ -55,4 +55,50 @@
         }
     }
 </div>
+<div class="row justify-content-center">
+    <div class="col-lg-12">
+        <div class="card">
+            <div class="row">
+                <div class="col-lg-3 radio-group">
+                    <div class="row d-flex px-3 radio">
+                        <img class="pay" src="https://i.imgur.com/WIAP9Ku.jpg">
+                        <p class="my-auto">Credit Card</p>
+                    </div>
+                    <div class="row d-flex px-3 radio gray">
+                        <img class="pay" src="https://i.imgur.com/OdxcctP.jpg">
+                        <p class="my-auto">Debit Card</p>
+                    </div>
+                    <div class="row d-flex px-3 radio gray mb-3">
+                        <img class="pay" src="https://i.imgur.com/cMk1MtK.jpg">
+                        <p class="my-auto">PayPal</p>
+                    </div>
+                </div>
+                <div class="col-lg-5">
+                    <div class="row px-2">
+                        <div class="form-group col-md-6"> <label class="form-control-label">Name on Card</label> <input type="text" id="cname" class="checkoutText" name="cname" placeholder="Cardholder Name"> </div>
+                        <div class="form-group col-md-6"> <label class="form-control-label">Card Number</label> <input type="text" id="cnum" class="checkoutText" name="cnum" placeholder="xxxx xxxx xxxx xxxx"> </div>
+                    </div>
+                    <div class="row px-2">
+                        <div class="form-group col-md-6"> <label class="form-control-label">Expiration Date</label> <input type="text" id="exp" class="checkoutText" name="exp" placeholder="MM/YYYY"> </div>
+                        <div class="form-group col-md-6"> <label class="form-control-label">CVV</label> <input type="text" id="cvv" name="cvv" class="checkoutText" placeholder="***"> </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 mt-2">
+                    <div class="row d-flex justify-content-between px-4">
+                        <p class="mb-1 text-left">Subtotal</p>
+                        <h6 class="mb-1 text-right">$23.49</h6>
+                    </div>
+                    <div class="row d-flex justify-content-between px-4">
+                        <p class="mb-1 text-left">Shipping</p>
+                        <h6 class="mb-1 text-right">$0.00</h6>
+                    </div>
+                    <div class="row d-flex justify-content-between px-4" id="tax">
+                        <p class="mb-1 text-left">Total (tax included)</p>
+                        <h6 class="mb-1 text-right">$26.48</h6>
+                    </div> <input type="submit" formaction="#" class="btn-block btn-blue" name="Checkout" value="Checkout">
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
