--- a/Team3Shopping/Views/Gallery/Index.cshtml
+++ b/Team3Shopping/Views/Gallery/Index.cshtml
@@ -54,7 +54,7 @@
                             <!-- Product actions-->
 
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><div class="addtocart_btn">Add to Cart</div></div>
+                                <div class="text-center"><button type="button" class="addtocart_btn">Add to Cart</button></div>
                             </div>
                         </div>
                     </div>
