--- a/Team3Shopping/Views/Shared/_Layout.cshtml
+++ b/Team3Shopping/Views/Shared/_Layout.cshtml
@@ -16,50 +16,53 @@
     <header>
 
         <!--Navbar-->
-        <nav class="navbar navbar-toggleable-md navbar-dark">
-            <div class="container">
-                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav1" aria-controls="navbarNav1" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <a class="navbar-brand" href="#">
-                    <strong>WhiteStar Shop</strong>
-                </a>
-                <div class="collapse navbar-collapse" id="navbarNav1">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link">Home <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" >Features</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" >Pricing</a>
-                        </li>
-                        <li class="nav-item dropdown btn-group">
-                            <a class="nav-link dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">More info</a>
-                            <div class="dropdown-menu dropdown" aria-labelledby="dropdownMenu1">
-                                <a class="dropdown-item">Contact</a>
-                                <a class="dropdown-item">Billing adress</a>
-                                <a class="dropdown-item">Discounts</a>
-                            </div>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-controller="PurchaseHistory" asp-action="Test" >My Purchases</a>
-                        </li>
-                    </ul>
-                    <form class="form-inline waves-effect waves-light">
-                        <input class="form-control" type="text" placeholder="Search">
-                    </form>
-
-                    <a href="/Cart/ToCart" class="btn btn-info btn-lg">
-                        <span class="glyphicon glyphicon-shopping-cart"></span>  Cart
+        @if (Context.Request.Cookies["SessionId"] != null)
+        {
+            <nav class="navbar navbar-toggleable-md navbar-dark">
+                <div class="container">
+                    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav1" aria-controls="navbarNav1" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">
+                        <strong>WhiteStar Shop</strong>
                     </a>
-                </div>
-            </div>
-        </nav>
-        <!--/.Navbar-->
+                    <div class="collapse navbar-collapse" id="navbarNav1">
+                        <ul class="navbar-nav mr-auto">
+                            <li class="nav-item active">
+                                <a class="nav-link">Home <span class="sr-only">(current)</span></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link">Features</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link">Pricing</a>
+                            </li>
+                            <li class="nav-item dropdown btn-group">
+                                <a class="nav-link dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">More info</a>
+                                <div class="dropdown-menu dropdown" aria-labelledby="dropdownMenu1">
+                                    <a class="dropdown-item">Contact</a>
+                                    <a class="dropdown-item">Billing adress</a>
+                                    <a class="dropdown-item">Discounts</a>
+                                </div>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="PurchaseHistory" asp-action="Test">My Purchases</a>
+                            </li>
+                        </ul>
+                        <form class="form-inline waves-effect waves-light">
+                            <input class="form-control" type="text" placeholder="Search">
+                        </form>
 
-    </header>
+                        <a href="/Cart/ToCart" class="btn btn-info btn-lg">
+                            <span class="glyphicon glyphicon-shopping-cart"></span>  Cart
+                        </a>
+                    </div>
+                </div>
+            </nav>
+        }
+            <!--/.Navbar-->
+
+        </header>
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
