--- a/Team3Shopping/Views/Cart/ToCart.cshtml
+++ b/Team3Shopping/Views/Cart/ToCart.cshtml
@@ -23,7 +23,7 @@
         if (carts[i].AddToCartProductQuantity > 0)
         {
             float price = products[i].ProductPrice * carts[i].AddToCartProductQuantity;
-            <div class="item">
+            <div class="item @carts[i].ProductId" id="@carts[i].UserId">
                 <div class="buttons">
                     <!--<span class="delete-btn"></span> -->
                     <span class="like-btn"></span>
@@ -43,11 +43,11 @@
                     <button class="plus-btn" type="button" name="button">
                         <img src="/Image/Cart/plus.svg" alt="" />
                     </button>
-                    <input type="text" name="name" value="@carts[i].AddToCartProductQuantity">
+                    <input type="text" name="name" id="@carts[i].ProductId" value="@carts[i].AddToCartProductQuantity">
                     <button class="minus-btn" type="button" name="button">
                         <img src="/Image/Cart/minus.svg" alt="" />
                     </button>
-                    <button class="remove" type="button" name="button">Remove</button>
+                    <button class="remove @carts[i].UserId" type="button" name="button">Remove</button>
                 </div>
 
                 <div class="price">$@price</div>
@@ -55,8 +55,9 @@
         }
     }
 </div>
+<form action="/Cart/PurchaseDone" method="post">
 <div class="row justify-content-center">
-    <div class="col-lg-12">
+    <div class="col-lg-10">
         <div class="card">
             <div class="row">
                 <div class="col-lg-3 radio-group">
@@ -73,7 +74,7 @@
                         <p class="my-auto">PayPal</p>
                     </div>
                 </div>
-                <div class="col-lg-5">
+                <div class="col-lg-4">
                     <div class="row px-2">
                         <div class="form-group col-md-6"> <label class="form-control-label">Name on Card</label> <input type="text" id="cname" class="checkoutText" name="cname" placeholder="Cardholder Name"> </div>
                         <div class="form-group col-md-6"> <label class="form-control-label">Card Number</label> <input type="text" id="cnum" class="checkoutText" name="cnum" placeholder="xxxx xxxx xxxx xxxx"> </div>
@@ -83,7 +84,7 @@
                         <div class="form-group col-md-6"> <label class="form-control-label">CVV</label> <input type="text" id="cvv" name="cvv" class="checkoutText" placeholder="***"> </div>
                     </div>
                 </div>
-                <div class="col-lg-4 mt-2">
+                <div class="col-lg-3 mt-2">
                     <div class="row d-flex justify-content-between px-4">
                         <p class="mb-1 text-left">Subtotal</p>
                         <h6 class="mb-1 text-right">$23.49</h6>
@@ -95,10 +96,11 @@
                     <div class="row d-flex justify-content-between px-4" id="tax">
                         <p class="mb-1 text-left">Total (tax included)</p>
                         <h6 class="mb-1 text-right">$26.48</h6>
-                    </div> <input type="submit" formaction="#" class="btn-block btn-blue" name="Checkout" value="Checkout">
+                    </div> <input type="submit" class="btn-block btn-blue" name="Checkout" value="Checkout">
                 </div>
             </div>
         </div>
     </div>
 </div>
+</form>
 
