--- a/Team3Shopping/Views/Cart/PurchaseDone.cshtml
+++ b/Team3Shopping/Views/Cart/PurchaseDone.cshtml
@@ -8,4 +8,4 @@
 
 <p style="text-align:center">Please visit <a href="@Url.Action("Index","PurchaseHistory")">My Purchase</a> to retrieve the activation code.</p>
 
-<p style="text-align:center">Thank You for shopping with WhiteStar</p>
+<h4 style="text-align:center">Thank You for choosing WhiteStar</h4>
