--- a/Team3Shopping/Views/Shared/_Layout.cshtml
+++ b/Team3Shopping/Views/Shared/_Layout.cshtml
@@ -60,21 +60,23 @@
                 </div>
             </nav>
         }
-            <!--/.Navbar-->
+        <!--/.Navbar-->
 
-        </header>
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2021 - Team3Shopping - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @RenderSection("Scripts", required: false)
-</body>
+    </header>
+    <main role="main" class="pb-3">
+        @RenderBody()
+    </main>
+    @if (Context.Request.Cookies["SessionId"] != null)
+    {
+        <footer class="border-top footer text-muted">
+            <div class="container">
+                &copy; 2021 - Team3Shopping - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            </div>
+        </footer>
+    }
+        <script src="~/lib/jquery/dist/jquery.min.js"></script>
+        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="~/js/site.js" asp-append-version="true"></script>
+        @RenderSection("Scripts", required: false)
+    </body>
 </html>
