--- a/Team3Shopping/Views/Gallery/Product.cshtml
+++ b/Team3Shopping/Views/Gallery/Product.cshtml
@@ -6,17 +6,17 @@
     Product thisProduct = (Product)ViewData["thisProduct"];
 }
 
+@section Scripts {
+    <script src="~/js/Gallery.js"></script>
+}
 
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<h3>Rate!</h3>
-<div class="rating left">
-    <div class="stars right">
-        <a class="star rated"></a>
-        <a class="star rated"></a>
-        <a class="star rated"></a>
-        <a class="star"></a>
-        <a class="star"></a>
-    </div>
+<h1> @thisProduct.ProductName </h1>
+<p> <strong> Product Description: </strong> @thisProduct.ProductDesc</p>
+<p> $@thisProduct.ProductPrice</p>
+
+
+<div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+    <div class="text-center"><button type="button" id=@thisProduct.Id class="addtocart_btn">Add to Cart </button></div>
 </div>
+
 
