--- a/Team3Shopping/Views/Cart/ToCart.cshtml
+++ b/Team3Shopping/Views/Cart/ToCart.cshtml
@@ -16,7 +16,7 @@
 <div class="shopping-cart">
     <!-- Title -->
     <div class="title">
-        Shopping Cart
+        Shopping Cart <span class="header1">Product</span> <span class="header2">Quantity</span> <span class="header3">Price</span>
     </div>
     <div id="shopping-items">
     <!--Looping through all the products -->
@@ -39,17 +39,11 @@
                 <div class="description">
                     <span>@products[i].ProductName</span>
                     <span>@products[i].ProductCategory</span>
-                    <span>@products[i].ProductPrice</span>
+                    <span>$@products[i].ProductPrice</span>
                 </div>
 
-                <div class="quantity">
-                    <button class="plus-btn" type="button" name="button">
-                        <img src="/Image/Cart/plus.svg"  alt="" />
-                    </button>
+                <div class="quantity">  
                     <input type="number" name="name" class="productQuantity @carts[i].UserId" id="@carts[i].ProductId" value="@carts[i].AddToCartProductQuantity">
-                    <button class="minus-btn" type="button" name="button">
-                        <img src="/Image/Cart/minus.svg" alt="" />
-                    </button>
                     <button class="remove @carts[i].ProductId" id="@carts[i].UserId" type="button" name="button">Remove</button>
                 </div>
 
@@ -61,7 +55,7 @@
 </div>
 <form action="/Cart/PurchaseDone" method="post">
 <div class="row justify-content-center">
-    <div class="col-lg-10">
+    <div class="col-lg-12">
         <div class="card">
             <div class="row">
                 <div class="col-lg-3 radio-group">
@@ -78,7 +72,7 @@
                         <p class="my-auto">PayPal</p>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-6">
                     <div class="row px-2">
                         <div class="form-group col-md-6"> <label class="form-control-label">Name on Card</label> <input type="text" id="cname" class="checkoutText" name="cname" placeholder="Cardholder Name"> </div>
                         <div class="form-group col-md-6"> <label class="form-control-label">Card Number</label> <input type="text" id="cnum" class="checkoutText" name="cnum" placeholder="xxxx xxxx xxxx xxxx"> </div>
