--- a/Team3Shopping/wwwroot/css/cartPage.css
+++ b/Team3Shopping/wwwroot/css/cartPage.css
@@ -16,7 +16,7 @@ body {
 .shopping-cart {
     width: 750px;
     height: auto;
-    margin: 60px auto;
+    margin: 10px auto 10px auto;
     background: #FFFFFF;
     box-shadow: 1px 2px 3px 0px rgba(0,0,0,0.10);
     border-radius: 6px;
@@ -33,10 +33,22 @@ body {
     font-weight: 400;
 }
 
+.header1{
+    margin-left:120px;
+}
+.header2{
+    margin-left:140px;
+}
+.header3{
+    margin-left:83px
+}
+
+
 .item {
     padding: 20px 30px;
     height: 120px;
     display: flex;
+    border-top: 1px solid #E1E8EE;
 }
 
     .item:nth-child(3) {
@@ -50,16 +62,6 @@ body {
     padding-top: 30px;
     margin-right: 60px;
 }
-
-/*.delete-btn {
-    display: inline-block;
-    cursor: pointer;
-    width: 18px;
-    height: 17px;
-    background: url("/Image/Cart/delete-icn.svg") no-repeat center;
-    margin-right: 20px;
-}*/
-
 
 .like-btn {
     position: absolute;
@@ -108,6 +110,7 @@ body {
 .description {
     padding-top: 8px;
     margin-right: 20px;
+    margin-left:10px;
     width: 150px;
 }
 
@@ -130,8 +133,8 @@ body {
 
 /* Product Quantity */
 .quantity {
-    padding-top: 20px;
-    margin-right: 30px;
+    padding-top: 10px;
+    margin-left: 40px;
 }
 
     .quantity input {
@@ -166,15 +169,6 @@ button[class*=btn] {
 }
 
 
-.minus-btn img {
-    margin-bottom: 3px;
-}
-
-.plus-btn img {
-    margin-top: -2px;
-
-}
-
 button:focus,
 input:focus {
     outline: 0;
@@ -183,12 +177,12 @@ input:focus {
 /*Price */
 .price {
     width: 83px;
-    padding-top: 27px;
+    padding-top: 17px;
     text-align: center;
     font-size: 16px;
     color: #43484D;
     font-weight: 300;
-    margin-right:-10px;
+    margin-left:40px;
 }
 
 /* Responsive */
@@ -230,7 +224,7 @@ input:focus {
 .border-top {
     border-top: 1px solid #EEEEEE !important;
     margin-top: 20px;
-    padding-top: 15px
+    padding-top: 15px;
 }
 
 .card {
