--- a/Team3Shopping/Views/Cart/ToCart.cshtml
+++ b/Team3Shopping/Views/Cart/ToCart.cshtml
@@ -18,6 +18,7 @@
     <div class="title">
         Shopping Cart <span class="header1">Product</span> <span class="header2">Quantity</span> <span class="header3">Price</span>
     </div>
+    <div id="updateShoppingPrice">
     <!--Looping through all the products -->
     @for (int i = 0; i < carts.Count; i++)
     {
@@ -50,6 +51,7 @@
             </div>
         }
     }
+    </div>
 </div>
 <form action="/Cart/PurchaseDone" method="post">
 <div class="row justify-content-center">
@@ -87,7 +89,7 @@
                     </div>
                     <div class="row d-flex justify-content-between px-4">
                         <p class="mb-1 text-left">Discount</p>
-                        <h6 class="mb-1 text-right" id="total">$0.00</h6>
+                        <h6 class="mb-1 text-right" id="discount">$0.00</h6>
                     </div>
                     <div class="row d-flex justify-content-between px-4" id="tax">
                         <p class="mb-1 text-left">Total (tax included)</p>
