--- a/Team3Shopping/Views/Cart/Unsuccessful.cshtml
+++ b/Team3Shopping/Views/Cart/Unsuccessful.cshtml
@@ -2,4 +2,7 @@
 @{
 }
 
-<h6 style="text-align:center">Unsuccessful Transaction!</h6>
+<h1 style="text-align:center">Unsuccessful Transaction!</h1>
+<a style="text-align:center" href="@Url.Action("Index","Galaxy")">Home page</a>
+
+
